--- a/Course/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Course/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -8,9 +8,9 @@
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
-<p>
-    Təsdiq maili elektron poçt ünavnınıza göndərildi. Zəhmət olmasa, e-poçt ünvanınızı yoxlayın. Hesabınızı təsdiq etdikdən sonra giriş edə bilərsiniz
-</p>
+    <p>
+        Confirmation email sent. You can login after the account is approved by the management
+    </p>
     }
     else
     {
