--- a/Course/Views/Home/Index.cshtml
+++ b/Course/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <h2 ><a href="/Admin/Index">Admin</a></h2>
-    <h2 ><a href="/Student/Index">Student</a></h2>
-</div>
+<br />
+<br />
+<br />
+<br />
+<h1>Course Management Application</h1>
