--- a/Course/Views/Students/AddStudent.cshtml
+++ b/Course/Views/Students/AddStudent.cshtml
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h3>Add Student</h3><br /><br />
+    <h5 class="text-danger">@ViewBag.checkResultMessage</h5>
     <div>
         @using (Html.BeginForm("AddStudent", "Students", FormMethod.Post))
         {
